2013-02-11  Andy Buckley  <andy.buckley@cern.ch>

	* Adding a new implementation of NearestPointExtrapolator.

2013-02-04  Andy Buckley  <andy.buckley@cern.ch>

	* Adding migration/testpdf.cc and corresponding README instructions.

	* Removed debug printout from GridPDF.cc and re-added xKnots() and q2Knots() methods.

	* Updated creategrids script to new format.

	* Creating the migration directory.

2013-01-29  Andy Buckley  <andy.buckley@cern.ch>

	* Updates to TODOs, CONFIGFLAGS, DESIGN, etc. after first dev meeting.

	* More Doxygen: making the namespace and free functions documented, with grouping.

2013-01-28  Andy Buckley  <andy.buckley@cern.ch>

	* Adding backward compatibility special case treatment for the "cteq6ll" misspelling from prehistory.

	* Adding setting of available AlphaS params in the PDF interface.

	* Adding search path set/append/prepend functions, using the LHAPDF_DATA_PATH env variable.

	* More methods, and public access to most data members on AlphaS.

2013-01-25  Andy Buckley  <andy.buckley@cern.ch>

	* Adding sorting of the flavor array when reading from metadata
	(and use of Boost range sort)

	* Fixed clearing of temp double* array variable so subgrid loading
	now works. Interpolation across subgrid boundaries not tested!

	* Added two more ways to assign the grid data arrays, but the
	original way seems fine. Now defining the grid data x/Q2 loop
	order.

	* Fixed the AnalyticPDF example: now simpler _and_ it works :)

	* A bit of virtual function rethinking on PDF.

2013-01-23  Andy Buckley  <andy.buckley@cern.ch>

	* Adding code to allow comments in the grid data blocks.

	* Some DESIGN doc cleanup.

	* Moving tests and their output data files into the tests/ dir.

	* Build system tweaks: adding --with args to configure for Boost and yaml-cpp, and a 'doxy' target.

2013-01-22  Andy Buckley  <andy.buckley@cern.ch>

	* Removing defunct data and knot members from GridPDF.
