@@ -10,9 +10,7 @@ namespace LHAPDF {
   /// This class will interpolate in 2D using a bicubic hermite spline.
   class BicubicInterpolator : public Interpolator {
   public:
-
-    double interpolateXQ2(int id, double x, double q2) const;
-
+    double _interpolateXQ2(const KnotArray1F& subgrid, double x, size_t ix, double q2, size_t iq2) const;
   };
 
   /// @todo Make a log-space BicubicLogInterpolator based on this
