@@ -8,7 +8,7 @@ namespace LHAPDF {
   /// Implementation of bilinear interpolation
   class BilinearInterpolator : public Interpolator {
   public:
-    double interpolateXQ2(int id, double x,  double q2) const;
+    double _interpolateXQ2(const KnotArray1F& subgrid, double x, size_t ix, double q2, size_t iq2) const;
   };
 
 
