@@ -1,5 +1,5 @@
 Verbosity: 1
 Interpolator: cubic
-Extrapolator: error
+Extrapolator: nearest
 ImplicitFlavorAction: return_zero
 PwdInSearchPath: false
