@@ -1,9 +1,4 @@
-#include "LHAPDF/GridPDF.h"
 #include "LHAPDF/BilinearInterpolator.h"
-#include <algorithm>
-#include <cassert>
-
-using namespace std;
 
 namespace LHAPDF {
 
@@ -20,17 +15,10 @@ namespace LHAPDF {
   }
 
 
-  double BilinearInterpolator::interpolateXQ2(int id, double x, double q2) const {
-    /// @todo Move the following to the Interpolator interface and implement caching
-    // Subgrid and index lookup
-    const GridPDF::KnotArray1F& subgrid = pdf().subgrid(id, q2);
-    const size_t ix = subgrid.ixbelow(x);
-    const size_t iq2 = subgrid.iq2below(q2);
-
+  double BilinearInterpolator::_interpolateXQ2(const KnotArray1F& subgrid, double x, size_t ix, double q2, size_t iq2) const {
     // First interpolate in x
     const double f_ql = _interpolateLinear(x, subgrid.xs()[ix], subgrid.xs()[ix+1], subgrid.xf(ix, iq2), subgrid.xf(ix+1, iq2));
     const double f_qh = _interpolateLinear(x, subgrid.xs()[ix], subgrid.xs()[ix+1], subgrid.xf(ix, iq2+1), subgrid.xf(ix+1, iq2+1));
-
     // Then interpolate in Q2, using the x-ipol results as anchor points
     return _interpolateLinear(q2, subgrid.q2s()[iq2], subgrid.q2s()[iq2+1], f_ql, f_qh);
   }
